[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "OpenEnv Email Triage Environment"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openai==1.40.0",
    "httpx==0.27.0"
]
requires-python = ">=3.11"

[tool.setuptools]
py-modules = [
    "models",
    "tasks",
    "environment",
    "server",
    "inference"
]