[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "OpenEnv Email Triage Environment"
authors = [
    { name = "Himanshu" }
]
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openai>=2.7.2",
    "httpx==0.27.0",
    "openenv-core>=0.2.0"
]

# ✅ REQUIRED for OpenEnv validator
[project.scripts]
start = "server.app:main"

# ✅ Tell setuptools about your modules
[tool.setuptools]
py-modules = [
    "models",
    "tasks",
    "environment",
    "server",
    "inference"
]